--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,8 +1,8 @@
 // Dark theme overrides
-// $AU-colordark-foreground-text:   #ffffff;
-// $AU-colordark-foreground-action: #f9f9f9;
-// $AU-colordark-foreground-focus:  #13e241;
-// $AU-colordark-background:        #134169;
+$AU-colordark-foreground-text:   #ffffff;
+$AU-colordark-foreground-action: #f9f9f9;
+$AU-colordark-foreground-focus:  #13e241;
+$AU-colordark-background:        #904C77;
 
 // Light theme overrides
 // $AU-color-foreground-action: #134169;
