--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,7 +2,9 @@
 $AU-colordark-foreground-text:   #ffffff;
 $AU-colordark-foreground-action: #61DAFF;
 $AU-colordark-foreground-focus:  #13e241;
-$AU-colordark-background:        rgba(4,107,153,.99);
+$AU-colordark-background:        #31312E;
+
+//rgba(4,107,153,.99);
 
 // #31312E;
 
@@ -40,6 +42,38 @@ body {
 	box-shadow: 5px 5px;
 
 }
+
+// Look into website for comments below https://www.w3schools.com/howto/howto_css_blurred_background.asp
+
+// Make background transparent
+// .au-body--background{
+// 	background-image: url('https://www.gitpod.io/static/04a67274312aeedce08b6b7a46e0046a/d3340/screenshot.png');
+// 	background-repeat: no-repeat; 
+// 	background-attachment: fixed; 
+// 	background-size: cover; 
+// 	height: 100%;   
+// 	filter: blur(2px);   
+// 	-webkit-filter: blur(2px);
+// }
+
+// Make text opaque
+// .col-xs-12--text{
+// 	background-color: rgb(0,0,0); /* Fallback color */
+// 	background-color: rgba(0,0,0, 0); /* Black w/opacity/see-through */
+// 	color: white;
+// 	font-weight: bold;
+// 	border: 3px solid #f1f1f1;
+// 	position: absolute;
+// 	top: 0%;
+// 	left: 50%;
+// 	transform: translate(-50%, -50%);
+// 	z-index: 2;
+// 	width: 80%;
+// 	padding: 20px;
+// 	text-align: center;
+// 	filter: blur(0px);
+// }
+
 
 // Increase the spacing for au-body elements inside main
 main > .au-body {
