--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -43,6 +43,13 @@ body {
 
 }
 
+.intro .content em {
+    font-size: 20px;
+    font-size: 1.25rem;
+    line-height: 1.6;
+    font-style: normal;
+}
+
 // Look into website for comments below https://www.w3schools.com/howto/howto_css_blurred_background.asp
 
 // Make background transparent
